# base64

./: .gitignore  CMakeLists.txt  README.md  wscript
example/: read_encoded.rb  read_file.cpp  write_encoded.cpp  write_encoded.rb  wscript
example/binary_data/: binary_data.cpp  wscript
example/parse_data/: read_encoded.rb  read_file.cpp  write_encoded.cpp  write_encoded.rb
include/base64/: base64.hpp
test/test_base64/: test_base64.cpp  wscript
